fixed issue in iphone 6, not showing result cuz of replaceAll() ehhh

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,7 +32,7 @@ body {
     width: 100%;
     height: 100%;
     background: linear-gradient(180deg, #F2F6FF 0%, #F2F5FB 100%);
-    font-family: 'PT Serif', Aldrich, Arial, Helvetica, sans-serif;
+    font-family: 'Aldrich', 'PT Serif', Arial, Helvetica, sans-serif;
     position: relative;
     border-radius: 45px;
     /* background: #dfe9f7; */
